# learn_dataeng

./: .gitignore  SAMPLE_RESULTS.md  docker-compose.yml  monte_carlo_spark.md  pyproject.toml
src/learn_dataeng/: monte_carlo_spark.py  receive_kafka_data.py  receive_kafka_rdf.py  send_kafka_data.py
